# Rahunas configuration and database file
weblogindir = $(datadir)/rahunas
weblogin_DATA = \
    config.php \
		logout.php \
		templates \
		templates/kkuwifi \
		templates/kkuwifi/kkuwifi.html \
		templates/kkuwifi/rahunas.css \
		templates/kkuwifi/images \
		templates/kkuwifi/images/note.jpg \
		templates/kkuwifi/images/button02.jpg \
		templates/kkuwifi/images/w2_03.jpg \
		templates/kkuwifi/images/bullet01.gif \
		templates/kkuwifi/images/w2_02.jpg \
		templates/kkuwifi/images/w2_01.jpg \
		templates/kkuwifi/images/bg_02.jpg \
		templates/kkuwifi/images/w2_04.jpg \
		templates/rahunas \
		templates/rahunas/rahunas.css \
		templates/rahunas/images \
		templates/rahunas/images/rahunas.xcf \
		templates/rahunas/images/rahunas.png \
		templates/rahunas/rahunas.html \
		templates/kkulogin \
		templates/kkulogin/kkulogin.html \
		templates/kkulogin/rahunas.css \
		templates/kkulogin/images \
		templates/kkulogin/images/tail01.gif \
		templates/kkulogin/images/bg.gif \
		templates/kkulogin/images/head01.gif \
		templates/kkulogin/images/kku.gif \
		loading.gif \
		getmacaddr.php \
		rahu_dictionary.php \
		rahu_radius.class.php \
		login.php \
		Makefile.am \
		locale \
		locale/th_TH \
		locale/th_TH/LC_MESSAGES \
		locale/th_TH/LC_MESSAGES/messages.mo \
		locale/th_TH/LC_MESSAGES/messages.po \
		locale/messages.po \
		.htaccess \
		index.php \
		header.php \
		locale.php \
		note.txt \
		messages.php \
		xmlrpc_service.php \
		rahu_xmlrpc.class.php

EXTRA_DIST = $(weblogin_DATA)

